Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-103239

[macOS] Crash in AVFMediaPlayerObserver

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 6.2.7, 6.5.0 Beta1
    • 6.2.4
    • Multimedia
    • None
    • MacBook Pro 13" (M1, 2020)) macOS 12.0.1
      MacBook Pro 16" (Retina, Touch, Mid-2019) macOS 12.1
      MacBook Pro 13" (Mid-2012) macOS 10.15.7
    • macOS
    • ac24ced62c (qt/qtmultimedia/dev) a8c9b0bb52 (qt/qtmultimedia/6.4) a8c9b0bb52 (qt/tqtc-qtmultimedia/6.4) ac24ced62c (qt/tqtc-qtmultimedia/dev) b8bca31e8f (qt/tqtc-qtmultimedia/6.2)

      Crash in [AVFMediaPlayerObserver prepareToPlayAsset:withKeys:]

      I see such crashes among users crash reports on AppCenter.
      It's never reproduced for me locally, so probably it happens with some specific video files.

      Stack trace:

      Exception Type:  SIGSEGV
      Exception Codes: SEGV_MAPERR at 0x35ad469c5ff8
      Crashed Thread:  0
      
      Thread 0 Crashed:
      0   libobjc.A.dylib                      0x00007ff805aa929d objc_msgSend + 29
      1   QtMultimedia                         0x000000010fc18330 -[AVFMediaPlayerObserver prepareToPlayAsset:withKeys:] (avfmediaplayer.mm:275)
      2   QtMultimedia                         0x000000010fc17e72 __42-[AVFMediaPlayerObserver setURL:mimeType:]_block_invoke_2 (avfmediaplayer.mm:157)
      3   libdispatch.dylib                    0x00007ff805a5aad8 _dispatch_call_block_and_release + 11
      4   libdispatch.dylib                    0x00007ff805a5bcc9 _dispatch_client_callout + 7
      5   libdispatch.dylib                    0x00007ff805a685d8 _dispatch_main_queue_callback_4CF + 950
      6   CoreFoundation                       0x00007ff805d193b8 __CFRUNLOOP_IS_SERVICING_THE_MAIN_DISPATCH_QUEUE__ + 8
      7   CoreFoundation                       0x00007ff805cda9a6 __CFRunLoopRun + 2759
      8   CoreFoundation                       0x00007ff805cd9809 CFRunLoopRunSpecific + 566
      9   HIToolbox                            0x00007ff80ed463e1 RunCurrentEventLoopInMode + 291
      10  HIToolbox                            0x00007ff80ed46137 ReceiveNextEventCommon + 586
      11  HIToolbox                            0x00007ff80ed45ed5 _BlockUntilNextEventMatchingListInModeWithFilter + 69
      12  AppKit                               0x00007ff80862b8f0 _DPSNextEvent + 885
      13  AppKit                               0x00007ff808629f5c -[NSApplication(NSEvent) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] + 1410
      14  AppKit                               0x00007ff80861c359 -[NSApplication run] + 585
      15  libqcocoa.dylib                      0x000000011658aa68 QCocoaEventDispatcher::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (qcocoaeventdispatcher.mm:430)
      16  QtCore                               0x0000000116bea456 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (qeventloop.cpp:139)
      17  QtCore                               0x0000000116be1742 QCoreApplication::exec() (qcoreapplication.cpp:1382)
      

      Seems it doesn't depend on mac model or macOS version, see Environment.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dorisverria Doris Verria
            studiosus Vladimir Belyavsky
            Votes:
            2 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes